syntax = "proto2";

option go_package = "github.com/RoboCup-SSL/ssl-game-controller/internal/app/rcon";

// a reply that is sent by the controller for each request from teams or autoRefs
message ControllerReply {
    // status_code is an optional code that indicates the result of the last request
    optional StatusCode status_code = 1;
    // reason is an optional explanation of the status code
    optional string reason = 2;
    // next_token must be send with the next request, if secure communication is used
    // the token is used to avoid replay attacks
    // the token is always present in the very first message before the registration starts
    // the token is not present, if secure communication is not used
    reserved 3;
    // verification indicates if the last request could be verified (secure communication)
    reserved 4;

    enum StatusCode {
        UNKNOWN_STATUS_CODE = 0;
        OK = 1;
        REJECTED = 2;
    }
}
