syntax = "proto2";

option go_package = "github.com/RoboCup-SSL/ssl-game-controller/internal/app/rcon";

import "ssl_gc_rcon.proto";
import "ssl_gc_common.proto";

// a registration that must be send by teams to the controller as the very first message
message TeamRegistration {
    // the exact team name as published by the game-controller
    required string team_name = 1;
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 2;
    // the team (relevant only if a team plays against itself)
    optional Team team = 3;
}

// wrapper for all messages from a team's computer to the controller
message TeamToController {
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 1;

    oneof msg {
        // request a new desired keeper id
        int32 desired_keeper = 2;
        // response to an advantage choice request
        AdvantageResponse advantage_response = 3;
        // request to substitute a robot at the next possibility
        bool substitute_bot = 4;
        // send a ping to the GC to test if the connection is still open.
        // the value is ignored and a reply is sent back
        bool ping = 5;
    }
}

enum AdvantageResponse {
    option allow_alias = true;
    // stop the game
    STOP = 0;
    // continue the game a bit more
    CONTINUE = 1;
    // no choice -> will default to STOP
    UNDECIDED = 0;
}

// wrapper for all messages from controller to a team's computer
message ControllerToTeam {
    // reserve obsolete field ids
    reserved 2;
    
    oneof msg {
        // a reply from the controller
        ControllerReply controller_reply = 1;
    }
}
